--- a/styles.css
+++ b/styles.css
@@ -16,21 +16,40 @@ body {
 .card {
   width: 100px;
   height: 150px;
-  background-color: lightgray;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 10px;
-  border-radius: 5px;
-  font-size: 36px;
-  font-weight: bold;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
   perspective: 1000px;
-  backface-visibility: hidden;
 }
 
-.card.revealed {
+.card-face {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  backface-visibility: hidden;
+  font-size: 36px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.card-back {
+  background-color: lightgray;
+}
+
+.card-front {
+  background-color: white;
+  transform: rotateY(180deg);
+}
+
+.card.revealed .card-front {
+  transform: rotateY(0);
+}
+
+.card.revealed .card-back {
   transform: rotateY(180deg);
 }
 
